--- a/linksafe_web/index.html
+++ b/linksafe_web/index.html
@@ -28,13 +28,20 @@
                     <div class="inputBx">
                         <span>Web address</span>
                         <input type="text" name="linkInput">
+                        <p id="messageText"></p>
+                        
                     </div>
                     <div class="inputBx">
-                        <input type="submit" value="Check" name="btnCheck">
+                        <input type="submit" value="Check" name="btnCheck">                
                     </div>
                 </form>
             </div>
         </div>
     </section>
 </body>
+<script src="checker.js"></script>
 </html>
+
+
+
+
